[tool.poetry]
name = "ai-training-project-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ai_training_project_poetry"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
numpy = "^1.24.1"
keras = "^2.6.0"
pillow = "^9.4.0"
tqdm = "^4.64.1"
jupyterlab = "^3.5.3"
ipywidgets = "^8.0.4"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
